<resources>
    <string name="app_name">time-flow</string>


    <!-- 通用 -->
    <!-- 通用选项-->
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>

    <!-- 时间-->
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="hours">小时</string>
    <string name="minutes">分钟</string>

    <string name="Sunday">日</string>
    <string name="Monday">一</string>
    <string name="Tuesday">二</string>
    <string name="Wednesday">三</string>
    <string name="Thursday">四</string>
    <string name="Friday">五</string>
    <string name="Saturday">六</string>




    <!-- 底部导航 -->
    <string name="count_down">倒数日</string>
    <string name="clock">打卡</string>
    <string name="home">首页</string>
    <string name="focus">专注</string>
    <string name="profile">我的</string>



    <!-- 倒数日 -->
    <string name="add_event">添加</string>
    <string name="event_name">事件名称</string>
    <string name="target_date">目标日期</string>
    <string name="category">分类</string>
    <string name="life">生活</string>
    <string name="work">工作</string>
    <string name="study">考证</string>
    <string name="other">其他</string>


    <!-- 添加倒数日的对话框-->
    <string name="date_hint">目标日期</string>
    <string name="sort">分类</string>
    <string name="sort_life">生活</string>
    <string name="sort_work">工作</string>
    <string name="sort_verification">考证</string>
    <string name="sort_other">其他</string>
    <string name="confirm_add_event">确认添加</string>

    <!-- 打卡 -->
    <string name="cloak">每日打卡</string>
    <string name="add_habit">添加任务</string>
    <string name="habit_name">任务名称</string>
    <string name="today_tasks">今日任务</string>
    <string name="completion_rate">完成率</string>
    <string name="this_week">本周</string>
    <string name="this_month">本月</string>
    <string name="completion">完成</string>


    <!-- 首页-->
    <string name="today_affair">今日事务</string>
    <string name="year_and_month">xxxx年xx月</string>
    <string name="event_date">日期</string>
    <string name="high">高</string>
    <string name="middle">中</string>
    <string name="low">低</string>
    <string name="priority">优先级</string>

    <!-- 专注 -->
    <string name="focus_mode">专注模式</string>
    <string name="start_focus">开始专注</string>
    <string name="focus_description">专注期间将锁定设备，仅保留电话功能</string>


    <!-- 个人主页 -->
    <string name="user_name">用户名</string>
    <string name="user_email">用户邮箱</string>
    <string name="total_focus_time">总专注时间</string>
    <string name="habit_completion_rate">习惯完成率</string>
    <string name="edit_profile">编辑个人信息</string>
    <string name="settings">设置</string>
    <string name="logout">退出登录</string>
    <string name="manage_categories">管理分类</string>
    <string name="select_category">选择分类</string>


</resources>