<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_countdown"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/count_down" />

    <item
        android:id="@+id/nav_habit"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/clock" />

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_focus"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/focus" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />

</menu>